--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "my_youtube_backend",
   "version": "1.0.0",
   "description": "backend practice advance project",
+  "type": "module",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon src/index.js "
   },
   "keywords": [
     "javascript",
@@ -13,5 +14,9 @@
     "chai"
   ],
   "author": "sunni",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "nodemon": "^3.1.0",
+    "prettier": "^3.2.5"
+  }
 }
