--- a/.env.sample
+++ b/.env.sample
@@ -2,3 +2,10 @@ PORT = 8000
 MONGODB_URI=mongodb+srv://SUNAINI01_04:<YOUR-PASSWARD>@cluster0.6an0mcd.mongodb.net
 
 CORS_ORIGIN=*
+
+
+ACCESS_TOKEN_SECRET = chai_aur_code
+ACCESS_TOKEN_EXPIRY =1d
+REFRESH_TOKEN_SECRET = 1234
+
+REFRESH_TOKEN_EXPIRY = 10d
